--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Nossa biblioteca do curso JS com TDD na pratica.",
   "main": "index.js",
   "scripts": {
+    "lint": "./node_modules/.bin/eslint src/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +17,13 @@
     "library"
   ],
   "author": "Aline Bastos <alineabp@gmail.com> (http://github.com/alinebastos)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^3.10.2",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.7.1",
+    "husky": "^0.11.9"
+  }
 }
